# datarust

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  pages.yml
.zcode/plans/: plan-sess_99e3df7a-3668-49b8-b2db-0c7cd2de7e33.md
benches/: benchmarks.rs  compare_sklearn.py
blog/: medium-v0.6.md
book/: book.toml
book/src/: README.md  SUMMARY.md  api.md  architecture.md  changelog.md  comparison.md  concepts.md  examples.md  installation.md  performance.md  quickstart.md  roadmap.md
book/src/guide/: cluster.md  compose.md  datasets.md  decomposition.md  encoders.md  imputers.md  linear-models.md  metrics.md  model-selection.md  scalers.md
examples/: basic_preprocessing.rs  bench_compare_rust.rs  classification_workflow.rs  kmeans_clustering.rs  model_persistence.rs  pipeline_workflow.rs  regression_workflow.rs  regularization_comparison.rs  target_encoding.rs
src/: categorical_kind.rs  error.rs  function_transformer.rs  lib.rs  matrix.rs  pipeline.rs  polynomial.rs  serialize.rs  stats.rs  target_kind.rs  traits.rs  transformer_kind.rs
src/cluster/: kmeans.rs  metrics.rs  mod.rs
src/compose/: column_transformer.rs  mod.rs  output.rs
src/datasets/: breast_cancer.rs  diabetes.rs  iris.rs  mod.rs  wine.rs
src/decomposition/: jacobi.rs  mod.rs  pca.rs  randomized_svd.rs  truncated_svd.rs
src/encoder/: frequency.rs  label.rs  mod.rs  onehot.rs  ordinal.rs  target.rs
src/imputer/: knn.rs  mod.rs  simple.rs
src/linalg/: cholesky.rs  mod.rs
src/linear_model/: lasso.rs  linear_regression.rs  logistic_regression.rs  mod.rs  ridge.rs
src/metrics/: classification.rs  mod.rs  regression.rs
src/model_selection/: cross_val.rs  kfold.rs  mod.rs  rng.rs  split.rs
src/scaler/: binarizer.rs  kbins.rs  maxabs.rs  minmax.rs  mod.rs  normalizer.rs  power.rs  quantile.rs  robust.rs  standard.rs
src/selection/: mod.rs  select_k_best.rs  variance_threshold.rs
tests/: integration_cluster.rs  integration_column_transformer.rs  integration_linear_model.rs  integration_logistic.rs  integration_metrics.rs  integration_pipeline.rs  integration_regularized.rs  integration_serialize.rs  proptest.proptest-regressions  proptest.rs
