[package]
name = "datarust"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
description = "Scikit-Learn Preprocessing in Rust"
license = "MIT"
repository = "https://github.com/muratgenc/datarust"
readme = "README.md"
keywords = [
    "machine-learning",
    "preprocessing",
    "scikit-learn",
    "data",
    "ml",
    "regression",
    "linear-model",
]
categories = ["science", "mathematics", "algorithms"]
exclude = ["/.github", "/benches"]

[lib]
name = "datarust"
path = "src/lib.rs"

[features]
default = []
# Enable JSON serialization / save-load support for fitted transformers.
serde = ["dep:serde", "dep:serde_json"]
# Enable parallelism via rayon for large datasets.
rayon = ["dep:rayon"]
# Enable a tuned pure-Rust GEMM (via the `matrixmultiply` crate) for matrix
# products and covariance computation. Significantly speeds up PCA,
# TruncatedSVD and `Matrix::matmul` on large dense inputs. The default build
# remains zero-external-dependency; opt in with this feature.
matrixmultiply = ["dep:matrixmultiply"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rayon = { version = "1", optional = true }
matrixmultiply = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "basic_preprocessing"
path = "examples/basic_preprocessing.rs"

[[example]]
name = "pipeline_workflow"
path = "examples/pipeline_workflow.rs"

[[example]]
name = "target_encoding"
path = "examples/target_encoding.rs"

[package.metadata.docs.rs]
features = ["serde", "rayon", "matrixmultiply"]
rustdoc-args = ["--cfg", "docsrs"]
